# Knower

./: app.py  pyproject.toml
knower/: AbstractFetcher.py  DOIDownloader.py  Validators.py  utilities.py
