[tool.poetry]
name = "knower"
version = "0.1.0"
description = ""
authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
elsapy = "^0.5.1"
scholarly = "^1.7.11"
pyonenote = {git = "https://github.com/DissectMalware/pyOneNote.git"}
retrying = "^1.3.4"
beautifulsoup4 = "^4.12.3"
pysocks = "^1.7.1"
crossref-commons = "^0.0.7"
bibtexparser = "^1.4.1"
python-docx = "^1.1.2"
nltk = "^3.9.1"
pympler = "^1.1"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
